@@ -26,7 +26,8 @@ this option; the names will be generated by other means.
 		System Notes
 		------------
 
-* IRIX 6 / MIPSpro compiler 7.30
+IRIX 6 / MIPSpro compiler 7.30
+------------------------------
 
 The MIPSpro compiler requires the "-LANG:std" flag to enable the
 standard C++ library.  You must set the CC variable when you configure,
@@ -39,4 +40,16 @@ configuring, run "grep with_gcc libtool" in the top of the source
 directory.  If the first line of output reads "with_gcc=", then edit
 libtool and change it to read "with_gcc=no".
 
+FIXME: the preceeding is unnecessary if we build the release using
+a fixed libtool.
+
+
+DEC alpha with cxx V6.1-029 and RougeWave STL
+---------------------------------------------
+
+A user report that you may have to configure using
+
+	./configure DEC_CXX="-D__USE_STD_IOSTREAM -D__STD_MS"
+
+[Is that really "RogueWave"?]
 
