@@ -2,3 +2,5 @@ Tim Jansen <timj@systembureau.com>
 Christian Leutloff <leutloff@debian.org>
 Steve M. Robbins <steven.robbins@videotron.ca>
 Patrick Berny <PPBerny@web.de>
+Patrick Hartling
+Peer Sommerlund
